M2 accept ADR-0026 after 76-test gate